# zpr-compiler

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  README_ZPLC.md  build.rs  zpl.bnf
.github/workflows/: build.yml  check.yml  pr-notify.yml  release.yml
src/: allow.rs  compilation.rs  compiler.rs  config.rs  config_api.rs  context.rs  crypto.rs  define.rs  dump.rs  dumpv1.rs  dumpv2.rs  errors.rs  fabric.rs  fabric_util.rs  lex.rs  lib.rs  main.rs  never.rs  parser.rs  policy.proto  policybinary.rs  policybinaryv1.rs  policybinaryv2.rs  policybuilder.rs  policystubv1.rs  policystubv2.rs  policywriter.rs  protocols.rs  ptypes.rs  putil.rs  weaver.rs  zpl.rs  zplstr.rs
src/config/: mod.rs  node_link.rs  protocol.rs  service.rs  trusted_service.rs
test-data/: bas-01.zpl  bas-01.zplc  config.zplc  integ-conform-policy.zpl  integ-conform-policy.zplc  integ-v4-1node-2agent-ping.zpl  integ-v4-1node-2agent-ping.zplc  integ-v4-1node-3agent-ping.zpl  integ-v4-1node-3agent-ping.zplc  m3-ping-and-http.zpl  m3-ping-and-http.zplc  m3-ping-only.zpl  m3-ping-only.zplc  rfc15-001.zpl  rfc15-002.zpl  rfc15-003.zpl  rfc15-004-alt.zpl  rfc15-004.zpl  rfc15-005-alt.zpl  rfc15-005.zpl  rfc15-006-todo.zpl  rfc15-007-alt.zpl  rfc15-007.zpl  rfc15-008-alt.zpl  rfc15-008.zpl  rfc15-009.zpl  rfc15-010.zpl  rfc15-011.zpl  rfc15-012-todo.zpl  rfc15-013.zpl  rfc15-014-todo.zpl  rfc15-014.zpl  test-bas.zpl  test-bas.zplc  test-file.zpl  test-file.zplc  test-lhs-service.zpl  test-lhs-service.zplc  test-never.zpl  test-never.zplc  (+15 more)
tests/: zpl-test.rs
