[package]
name = "zplc"
version = "0.9.2"
edition = "2024"

[dependencies]
base64 = "0.22.1"
bytes = "1.10.1"
capnp = "0.23.0"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
colored = "3.0.0"
hex = "0.4.3"
nix = { version = "0.30.1", features = ["hostname"] }
openssl = "0.10.70"
prost = "0.13.4"
ring = "0.17.8"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.8"
toml = "0.9.7"
zpr-policy = { git = "https://github.com/org-zpr/zpr-policy-rs.git", tag = "v0.9.1", features = ["v1", "v2"]}
